--- a/public/style.css
+++ b/public/style.css
@@ -1,18 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Montez&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Parisienne&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Stalemate&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Stalemate&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Roboto&family=Stalemate&display=swap");
 
-/* Colors */
-/* green: #8ea7a3
-pink: #c4958a
-greywhite: #edebe8
-white: #f7f7f7 */
-
 body {
-  /* font-family: "Roboto", sans-serif; */
   font-family: "Amatic SC", cursive;
   background-color: #edebe8;
   margin: 0;
@@ -20,12 +9,38 @@ body {
 .main {
   padding: 30px;
 }
-.about-paragraph {
+.about-box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  padding: 15px;
+}
+.about-box p {
   font-size: 1.4rem;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 500px;
-  text-align: center;
+
+  max-width: 600px;
+  text-align: left;
+  background-color: #f7f7f7;
+  border: 1px solid #c4958a;
+  padding: 10px;
+}
+.about-box img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 1px solid #c4958a;
+  margin: 60px 20px 35px 20px;
+}
+
+@media only screen and (max-width: 712px) {
+  .about-box {
+    text-align: center;
+  }
+  .about-box img {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 /* BUTTONS */
 button {
@@ -69,6 +84,9 @@ button:hover {
   right: 0px;
   top: 3px;
 }
+.add-song-button-hide {
+  display: none;
+}
 /* END BUTTONS */
 
 /* NAV */
@@ -79,13 +97,12 @@ button:hover {
   grid-template-areas: "left center right";
   align-items: center;
   background-color: #8ea7a3;
+  padding: 25px 0;
 }
 .nav h1 {
   grid-area: center;
-  font-size: 3rem;
-  font-family: "Montez", cursive;
-  font-family: "Parisienne", cursive;
-  font-family: "Mr De Haviland", cursive;
+  font-size: 4rem;
+  margin: 0;
   font-family: "Stalemate", cursive;
   text-align: center;
   background-color: #8ea7a3;
@@ -130,7 +147,7 @@ ul [class^="nav-item"] {
 }
 /* END NAV */
 
-/* INPUTFORM */
+/* INPUTS */
 .input-form {
   display: none;
 }
@@ -141,7 +158,7 @@ ul [class^="nav-item"] {
   padding-top: 15px;
 }
 .input-form input,
-select {
+.input-form select {
   background-color: #f7f7f7;
   padding: 5px 10px 5px 10px;
   font-size: 1.3rem;
@@ -150,11 +167,21 @@ select {
   border: none;
   margin: 4px;
   flex-grow: 4;
+  border: 1px solid #c4958a;
 }
-select:hover {
+.filter-select:hover {
   cursor: pointer;
 }
-/* END INPUTFORM */
+.filter-select {
+  background-color: transparent;
+  font-size: 1.4rem;
+  font-family: "Amatic SC", cursive;
+  outline: none;
+  border: none;
+  margin-left: -4px;
+  font-weight: 700;
+}
+/* END INPUTS */
 
 /* SONGLIST */
 .main .h1 {
@@ -167,8 +194,11 @@ select:hover {
 }
 .arrow {
   width: 10px;
-  margin-left: 10px;
-  margin-bottom: 3px;
+  margin-bottom: -3px;
+  padding: 5px;
+}
+.arrow:hover {
+  cursor: pointer;
 }
 ul.songlist-header {
   display: grid;
@@ -190,6 +220,12 @@ ul.songlist {
   font-size: 1.4rem;
   margin: 7px 0 7px 0;
   border: 1px solid #c4958a;
+}
+.songlist-header li span {
+  margin-right: 10px;
+}
+.star {
+  width: 20px;
 }
 /* END SONGLIST */
 
